--- a/lucky-word-client.yml
+++ b/lucky-word-client.yml
@@ -1,5 +1,5 @@
 ---
 wordConfig:
-  luckyWord: SLOKAM TECH
-  preamble: Our technology is
+  luckyWord: SLOKAM TECHNOLOGIES
+  preamble: Super Institute
    
